[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faircom-json-action-client"  # MUST BE UNIQUE on PyPI
version = "0.0.2"
authors = [
    { name = "Adam Howell", email = "698228+AdamJHowell@users.noreply.github.com" },
]
description = "A helper client for FairCom JSON Action API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/AdamJHowell/JsonActionClient"

[tool.hatch.build.targets.wheel]
packages = ["src/json_action_client"]
